--- a/TrickingLibrary.Api/Pages/Account/Register.cshtml
+++ b/TrickingLibrary.Api/Pages/Account/Register.cshtml
@@ -28,6 +28,10 @@
     </div>
     <div class="field flex-row">
         <button type="submit">Sign Up</button>
+    </div>
+
+    <hr/>
+    <div class="field flex-row">
         <a asp-page="/Account/Login" asp-route-returnUrl="@Model.Form.ReturnUrl">Login</a>
     </div>
 </form>
