--- a/TrickingLibrary.Api/Pages/Account/Login.cshtml
+++ b/TrickingLibrary.Api/Pages/Account/Login.cshtml
@@ -23,6 +23,10 @@
     </div>
     <div class="field flex-row">
         <button type="submit">Sign In</button>
+    </div>
+
+    <hr/>
+    <div class="field flex-row">
         <a asp-page="/Account/Register" asp-route-returnUrl="@Model.Form.ReturnUrl">Register</a>
     </div>
 </form>
