--- a/TrickingLibrary.Api/Pages/Account/Login.cshtml
+++ b/TrickingLibrary.Api/Pages/Account/Login.cshtml
@@ -3,30 +3,26 @@
 
 @{
     ViewData["Title"] = "Login";
-    Layout = "Shared/_Layout";
+    Layout = "_Layout";
 }
 
-
 <form method="post">
-    <h3>Login</h3>
     <input type="hidden" asp-for="Form.ReturnUrl" value="@Model.Form.ReturnUrl">
     <div class="field">
-        <label asp-for="Form.Username">Username</label>
+        <label>Username</label>
         <input asp-for="Form.Username">
         <span asp-validation-for="Form.Username"></span>
     </div>
     <div class="field">
-
-        <label asp-for="Form.Password">Password</label>
+        <label>Password</label>
         <input asp-for="Form.Password">
         <span asp-validation-for="Form.Password"></span>
     </div>
     <div class="field flex-row">
-        <button type="submit">Sign In</button>
+        <button type="submit">Log In</button>
     </div>
-
-    <hr/>
+    <hr>
     <div class="field flex-row">
-        <a asp-page="/Account/Register" asp-route-returnUrl="@Model.Form.ReturnUrl">Register</a>
+        <a asp-page="/Account/Register" asp-route-returnUrl="@Model.Form.ReturnUrl">Create Account</a>
     </div>
 </form>
