--- a/TrickingLibrary.Api/Pages/Account/Register.cshtml
+++ b/TrickingLibrary.Api/Pages/Account/Register.cshtml
@@ -1,42 +1,38 @@
-@page
-@model TrickingLibrary.Api.Pages.Account.Registeer
+﻿@page
+@model TrickingLibrary.Api.Pages.Account.Register
 
 @{
     ViewData["Title"] = "Register";
-    Layout = "Shared/_Layout";
+    Layout = "_Layout";
 }
 
 <form method="post">
-    <h3>Register</h3>
     <input type="hidden" asp-for="Form.ReturnUrl" value="@Model.Form.ReturnUrl">
     <div class="field">
-        <label asp-for="Form.Username">Username</label>
+        <label>Username</label>
         <input asp-for="Form.Username">
         <span asp-validation-for="Form.Username"></span>
     </div>
     <div class="field">
-        <label asp-for="Form.Email">Email</label>
+        <label>Email</label>
         <input asp-for="Form.Email">
         <span asp-validation-for="Form.Email"></span>
     </div>
     <div class="field">
-
-        <label asp-for="Form.Password">Password</label>
+        <label>Password</label>
         <input asp-for="Form.Password">
         <span asp-validation-for="Form.Password"></span>
     </div>
     <div class="field">
-
-        <label asp-for="Form.ConfirmPassword">Confirm Password</label>
+        <label>Confirm Password</label>
         <input asp-for="Form.ConfirmPassword">
         <span asp-validation-for="Form.ConfirmPassword"></span>
     </div>
     <div class="field flex-row">
-        <button type="submit">Sign Up</button>
+        <button type="submit">Register</button>
     </div>
-
-    <hr/>
+    <hr>
     <div class="field flex-row">
-        <a asp-page="/Account/Login" asp-route-returnUrl="@Model.Form.ReturnUrl">Login</a>
+        <a asp-page="/Account/Login" asp-route-returnUrl="@Model.Form.ReturnUrl">Back to Login</a>
     </div>
 </form>
